--- a/css/styles.css
+++ b/css/styles.css
@@ -4,20 +4,68 @@ body {
   background-color: #ffffff;
 }
 
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
 ul {
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
   list-style: none;
 }
 
 a {
   text-decoration: none;
+  color: currentColor;
+}
+
+button {
+  cursor: pointer;
+}
+
+img {
+  display: block;
+}
+
+address {
+  font-style: normal;
+}
+
+.container {
+  width: 1158px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin: 0 auto;
 }
 
 /* ================================HEADER================================ */
 
 .header {
+  padding-top: 24px;
+  padding-bottom: 24px;
 }
+
+.header-container {
+  border-bottom: 1px;
+  display: flex;
+  align-items: center;
+}
+
 .header-navigation {
+  color-scheme: #2e2f42;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
+
 .header-logo {
   color: #4d5ae5;
   font-family: "Raleway", sans-serif;
@@ -27,12 +75,22 @@ a {
   letter-spacing: 0.03em;
   text-align: left;
   text-transform: uppercase;
+  align-items: center;
+  margin-right: 76px;
+  display: block;
 }
 .header-logo-color {
   color: #2e2f42;
 }
 
 .header-menu-list {
+  color: var(--NAVY-BLUE, #2e2f42);
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  display: flex;
+  gap: 40px;
 }
 .header-menu-item {
 }
@@ -52,8 +110,13 @@ a {
 
 .heeader-adress {
   font-style: normal;
+  font-weight: 400;
+  color: #434455;
+  margin-left: auto;
 }
 .header-adress-list {
+  display: flex;
+  gap: 40px;
 }
 .header-adress-item {
 }
@@ -78,15 +141,26 @@ a {
 
 .hero {
   background: #2e2f42;
+  padding: 188px 0;
 }
+
+.hero-container {
+  padding: 188px 472px 292px 472px;
+}
+
 .hero-title {
   color: #ffffff;
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 0.02em;
-  text-align: center;
+  max-width: 496px;
+  margin: 0 auto;
+  margin-bottom: 48px;
+  text-transform: capitalize;
 }
+
 .hero-btn {
   background: #4d5ae5;
   color: #ffffff;
@@ -97,6 +171,14 @@ a {
   letter-spacing: 0.04em;
   text-align: left;
   cursor: pointer;
+  min-width: 169px;
+  height: 56px;
+  padding: 16px 32px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  display: block;
 }
 
 .hero-btn:hover,
@@ -108,11 +190,17 @@ a {
 /* ================================FEATURES===================================== */
 
 .features {
+  padding-top: 120px;
+  padding-bottom: 50px;
 }
 
 .visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
   margin: -1px;
   border: 0;
+  padding: 0;
 
   white-space: nowrap;
   clip-path: inset(100%);
@@ -121,9 +209,16 @@ a {
 }
 
 .features-list {
+  display: flex;
+  align-items: center;
+  gap: 24px;
 }
+
 .features-item {
+  width: calc((100%-72px) / 4);
+  align-items: center;
 }
+
 .features-subtitle {
   color: #2e2f42;
   font-size: 20px;
@@ -131,6 +226,7 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: left;
+  margin-bottom: 8px;
 }
 .features-item-text {
   color: #434455;
@@ -146,8 +242,16 @@ a {
 
 .team {
   background: #f4f4fd;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
+
+.team-container-item {
+  padding: 32px 0;
+}
+
 .team-title {
+  margin: 0;
   color: #2e2f42;
   font-size: 36px;
   font-weight: 700;
@@ -155,17 +259,29 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 
 .team-list {
   background-color: #ffffff;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
 }
 
 .team-item {
   background-color: #ffffff;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .team-subtitle {
@@ -175,6 +291,8 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: center;
+  text-align: center;
+  margin-bottom: 8px;
 }
 .team-text {
   color: #434455;
@@ -183,13 +301,24 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  padding-bottom: 32px;
 }
 
 /* ========================================================================= */
 /* ================================PORTFOLIO===================================== */
 
 .portfolio {
+  background: #ffffff;
+  padding-top: 120px;
+  padding-bottom: 120px;
 }
+
+.portfolio-container {
+  padding: 32px 16px;
+  border: 1px solid #e7e9fc;
+  border-top: none;
+}
+
 .portfolio-title {
   color: #2e2f42;
   font-size: 36px;
@@ -198,14 +327,25 @@ a {
   letter-spacing: 0.02em;
   text-align: center;
   text-transform: capitalize;
+  margin-bottom: 72px;
 }
 .portfolio-list {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 24px;
+  row-gap: 48px;
 }
 
 .portfolio-item {
+  text-align: left;
+  background: #fff;
+  width: calc((100% - 48px) / 3);
 }
 
 .portfolio-img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
 
 .portfolio-subtitle {
@@ -215,6 +355,7 @@ a {
   line-height: 1.2;
   letter-spacing: 0.02em;
   text-align: left;
+  margin-bottom: 8px;
 }
 
 .portfolio-text {
@@ -224,6 +365,7 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
+  padding: 32px 16px 32px 16px;
 }
 
 /* ========================================================================= */
@@ -231,6 +373,11 @@ a {
 
 .footer {
   background: #2e2f42;
+  flex-shrink: 0;
+  padding: 100px 0;
+}
+.footer-container {
+  gap: 17.5px;
 }
 
 .footer-logo {
@@ -242,10 +389,18 @@ a {
   letter-spacing: 0.03em;
   text-align: left;
   text-transform: uppercase;
+  display: inline-block;
+  margin-bottom: 16px;
 }
 
 .footer-logo-color {
   color: #f4f4fd;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: "Raleway", sans-serif;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
 }
 
 .footer-text {
@@ -255,6 +410,8 @@ a {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
+  max-width: 264px;
+  margin: 0;
 }
 
 /* ========================================================================= */
