--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ address {
   border-bottom: 1px;
   display: flex;
   align-items: center;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-navigation {
@@ -101,6 +102,7 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
+  padding: 24px 0;
 }
 
 .header-menu-link:hover,
@@ -190,8 +192,7 @@ address {
 /* ================================FEATURES===================================== */
 
 .features {
-  padding-top: 120px;
-  padding-bottom: 50px;
+  padding: 120px 0;
 }
 
 .visually-hidden {
