--- a/css/styles.css
+++ b/css/styles.css
@@ -49,8 +49,6 @@ address {
 /* ================================HEADER================================ */
 
 .header {
-  padding-top: 24px;
-  padding-bottom: 24px;
   border-bottom: 1px solid #e7e9fc;
 }
 
@@ -58,7 +56,6 @@ address {
   border-bottom: 1px;
   display: flex;
   align-items: center;
-  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-navigation {
@@ -104,6 +101,7 @@ address {
   letter-spacing: 0.02em;
   text-align: left;
   padding: 24px 0;
+  display: block;
 }
 
 .header-menu-link:hover,
@@ -148,7 +146,6 @@ address {
 }
 
 .hero-container {
-  padding: 188px 472px 292px 472px;
 }
 
 .hero-title {
@@ -217,7 +214,7 @@ address {
 }
 
 .features-item {
-  width: calc((100%-72px) / 4);
+  width: calc((100% - 72px) / 4);
   align-items: center;
 }
 
@@ -265,7 +262,6 @@ address {
 }
 
 .team-list {
-  background-color: #ffffff;
   display: flex;
   flex-wrap: wrap;
   gap: 24px;
@@ -303,7 +299,6 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
-  padding-bottom: 32px;
 }
 
 /* ========================================================================= */
@@ -367,7 +362,6 @@ address {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: left;
-  padding: 32px 16px 32px 16px;
 }
 
 /* ========================================================================= */
